# advent_of_code

./: .gitignore  Cargo.toml  README.md
.cargo/: config
2016/d07/: main.js
2016/d11/: wrong.txt
2016/d20/: main.py
2017/d01/: d01
2017/d02/: d02
2017/d03/: d03
2017/d04/: d04  d04.cpp
2017/d05/: d05  d05.cpp
2018/d01/: main.py  main2.py
2018/d02/: main.py
2018/d03/: main.js
2018/d04/: main.js
2018/d05/: main.js
2019/d01/: main  main.cpp
2019/d02/: a.out  main  main.cpp  main.js  test.cpp
2019/d03/: main.js
2019/d04/: main.js
2019/d05/: main.js
2019/d06/: main.js
2019/d07/: main.js
2019/d08/: main.js
2019/d09/: main.js
2019/d10/: main.js
2019/d11/: main.js
2019/d12/: main.js
2019/libs/: intcode.js  project.json  test.js
2020/: Cargo.toml  utils.js
2020/d01/: main.js
2020/d02/: main.js
2020/d03/: main.js
2020/d04/: main.js
2020/d05/: main.js
2020/d06/: main.js
2020/d07/: main.js
2020/d08/: main.js  visual.html
2020/d09/: main.js
2020/d10/: main.js
2020/d11/: main.js
2020/d12/: main.js
2020/d13/: main.js
2020/d14/: main.js  test.txt
2020/d15/: main.js
2020/d16/: main.js
2020/src/: utils.rs
2021/python/: README.md
2021/rust/: Cargo.toml  README.md
examples/: 2023_07.txt
old/y2021/: d01.rs  d02.rs  d04.rs  d05.rs  d07.rs  d09.rs  d11.rs  d13.rs  d14.rs  d16.rs  d17.rs  d21.rs  d25.rs
src/: day.rs  grid.rs  helpers.rs  lib.rs  main.rs  utils.rs  y2021.rs  y2022.rs
src/helpers/: coordinate.rs  coordinate3d.rs
src/y2018/: d02.rs  d03.rs  d06.rs
src/y2020/: d14.rs
(+28 files in other folders)
