[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
num = "0.4.0"
pathfinding = "4"
json = "0"
itertools = "0.10.5"
cached = "0.54.0"
regex = "1.11.1"
